# fmm-directory-compressor

./: .gitignore  CMakeLists.txt  README.md
python/: CMakeLists.txt  DG_py.cpp
release/NPM/: tets.js
release/PYPI/: .gitignore  README.md  setup.py  test.py
release/PYPI/src/fmmpy_directory_compressor/: __init__.py
release/PYPI/src/fmmpy_directory_compressor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
release/PYPI/src/fmmpy_directory_compressor/win32/: fmmpy_directory_compressor.exp
release/PYPI/src/unix/fmmpy_directory_compressor.egg-info/: SOURCES.txt
release/PYPI/src/unix/fmmpy_directory_compressor/win32/: __inti__.py
release/PYPI/src/win32/fmmpy_directory_compressor/: __init__.py  fmmpy_directory_compressor.cp310-win_amd64.pyd  fmmpy_directory_compressor.lib
release/debian/fmm-directory-compressor_VERSIONNUMBER-RELEASENUMBER_ARCHITECTURE/DEBIAN/: control
src/: DC_cli.cpp  DC_js.cpp  DC_py.cpp  DG_cli.cpp  DG_py.cpp
src/include/: DC_cli.h  DC_js.h  DC_py.h  DG_cli.h  DG_py.h  common.cpp  common.h  compress.cpp  compress.h  generate.cpp  generate.h
src/include/linux/: make_dir.cpp  make_dir.h
src/include/win32/: make_dir.cpp  make_dir.h  zip.cpp
tests/: fiets.fps  generated_test.json  kwal.fps  test.json  test.py
tests/fpstest/: asdf.fps  fiets.fps
tests/to_use/02_Projects/01_Premiere/: FILMAGE-PREMIEREPRO-PROJECT-TEMPLATE.prproj
tests/to_use/02_Projects/02_AE/: FILMAGE-AFTEREFFECTS-PROJECT-TEMPLATE.aep
tests/to_use/02_Projects/07_Pro-Tools/: PRO TOOLS PROJECT.ptx
